---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2 March 2023
  Features:
    - Added seismic scanner for scanning connected landmasses at a longer range than radar
  Changes:
    - Decreased radar range from 45x45 to 35x35
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 1 March 2023
  Features:
    - Added charged battery transportation
      - Battery items can be charged at charging stations
      - Electricity from charged batteries can be released at discharging stations
      - Charged batteries can be loaded into containers
      - Charging and discharging stations share the same graphics for now
  Changes:
    - Reduced stack size of lead, titanium, and uranium ores from 25 to 15
    - Removed floating electric pole
    - Big electric pole and substation recipes now use less steel and more lead
    - Boat travels slightly faster
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 28 February 2023
  Changes:
    - Added slag as a byproduct of titansteel smelting in lava pools
    - Tweaked titansteel smelting/cooling balance
    - Oil rigs now have a larger electricity supply area around them
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 27 February 2023
  Bugfixes:
    - Fixed gun turrets requiring lead
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 25 February 2023
  Features:
    - Initial release