@@ -5,6 +5,8 @@ Date: 2 March 2023
     - Added seismic scanner for scanning connected landmasses at a longer range than radar
   Changes:
     - Decreased radar range from 45x45 to 35x35
+  Bugfixes:
+    - Fixed landfill not being minable
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.0
 Date: 1 March 2023
